[feature/swagger-ui] Logout api documantation and security bearer token
